syntax = "proto3";
package Im.Scrm.Ww.Proto; //命名空间约定
import "WTransport.proto";

message ChatMessage {
    int64 ConvId = 1; // 会话RemoteId
    int64 SenderId = 2; // 消息发送者Id
    EnumContentType ContentType = 3; // 发送的消息内容类型
    bytes Content = 4; // 内容 二进制流
    int64 MsgId = 5; //服务端的主键id
    int64 MsgRemoteId = 6; // 消息唯一id
    int64 CreateTime = 7; // 消息时间
    string SenderName = 8; // 消息发送者名称
    int64 RefId = 9; // 引用消息的id
    int32 Flag = 10;
    bool IsRevoke = 11;
    int64 ConvLocalId = 12; // 会话的LocalId
}

message HistoryMsgPushNoticeMessage {
    int64 WxId = 1; // 设备企业WX号
    repeated ChatMessage Messages = 2;
    //int32 Size = 3; // 页大小，固定20
    int32 Count = 4; // 总数，只在获取单个会话时有用，获取全部会话的时候不准确
    //int32 Page = 5; // 页码，从0开始
    int64 ConvId = 6; // 会话RemoteId
    bool HasMore = 7; //
    int64 ConvLocalId = 8; // 会话的LocalId
    int64 TaskId = 9;
}